--- a/weather_station/weather_station.ioc
+++ b/weather_station/weather_station.ioc
@@ -1,37 +1,57 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC.ContinuousConvMode=ENABLE
+ADC.DMAContinuousRequests=ENABLE
+ADC.IPParameters=ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,SamplingTime
+ADC.SamplingTime=ADC_SAMPLETIME_239CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC.0.Instance=DMA1_Channel1
+Dma.ADC.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC.0.Mode=DMA_CIRCULAR
+Dma.ADC.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F031K6T6
 Mcu.Family=STM32F0
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM14
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP0=ADC
+Mcu.IP1=DMA
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM14
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F031K6Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PB3
-Mcu.Pin7=PB6
-Mcu.Pin8=PB7
-Mcu.Pin9=VP_TIM14_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin10=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin2=PA0
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PB3
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F031K6Tx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -40,6 +60,8 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA0.Mode=IN0
+PA0.Signal=ADC_IN0
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=VCP_RX
 PA10.Locked=true
@@ -104,7 +126,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
