--- a/weather_station/weather_station.ioc
+++ b/weather_station/weather_station.ioc
@@ -36,16 +36,18 @@ Mcu.Name=STM32F031K6Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin10=PB6
+Mcu.Pin11=PB7
+Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA0
-Mcu.Pin3=PA9
-Mcu.Pin4=PA10
-Mcu.Pin5=PA13
-Mcu.Pin6=PA14
-Mcu.Pin7=PB3
-Mcu.Pin8=PB6
-Mcu.Pin9=PB7
-Mcu.PinsNb=11
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB3
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F031K6Tx
@@ -62,6 +64,11 @@ NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=Hall_In
+PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.Locked=true
+PA1.Signal=GPIO_Input
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=VCP_RX
 PA10.Locked=true
@@ -77,6 +84,10 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=Sharp_Out
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=VCP_TX
 PA9.Locked=true
