--- a/weather_station/weather_station.ioc
+++ b/weather_station/weather_station.ioc
@@ -1,35 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
 ADC.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC.ContinuousConvMode=ENABLE
-ADC.DMAContinuousRequests=ENABLE
-ADC.IPParameters=ClockPrescaler,ContinuousConvMode,DMAContinuousRequests,SamplingTime
-ADC.SamplingTime=ADC_SAMPLETIME_239CYCLES_5
+ADC.ContinuousConvMode=DISABLE
+ADC.DMAContinuousRequests=DISABLE
+ADC.IPParameters=DMAContinuousRequests,ContinuousConvMode,SamplingTime,ClockPrescaler
+ADC.SamplingTime=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.ADC.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC.0.Instance=DMA1_Channel1
-Dma.ADC.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC.0.Mode=DMA_CIRCULAR
-Dma.ADC.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC
-Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F031K6T6
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
-Mcu.IP1=DMA
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM14
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM14
+Mcu.IP6=TIM16
 Mcu.IP7=USART1
 Mcu.IPNb=8
 Mcu.Name=STM32F031K6Tx
@@ -39,6 +28,7 @@ Mcu.Pin1=PF1-OSC_OUT
 Mcu.Pin10=PB6
 Mcu.Pin11=PB7
 Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin2=PA0
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
@@ -47,13 +37,13 @@ Mcu.Pin6=PA10
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14
 Mcu.Pin9=PB3
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F031K6Tx
 MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -64,11 +54,12 @@ NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=Hall_In
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA1.GPIO_Label=Hall_INT
+PA1.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.Signal=GPXTI1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=VCP_RX
 PA10.Locked=true
@@ -85,7 +76,7 @@ PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=Sharp_Out
+PA2.GPIO_Label=Sharp_LED
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
@@ -137,7 +128,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_ADC_Init-ADC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -157,15 +148,23 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
-TIM14.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM14.Period=4799
-TIM14.Prescaler=9999
-USART1.BaudRate=115200
+TIM14.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM14.IPParameters=Prescaler,Period,AutoReloadPreload,ClockDivision
+TIM14.Period=47999
+TIM14.Prescaler=49999
+TIM16.IPParameters=Period,Prescaler
+TIM16.Period=65535
+TIM16.Prescaler=47
+USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
+VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 board=NUCLEO-F031K6
 boardIOC=true
 isbadioc=false
