low power adc and sleep mode

--- a/weather_station/weather_station.ioc
+++ b/weather_station/weather_station.ioc
@@ -2,8 +2,10 @@
 ADC.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
 ADC.ContinuousConvMode=DISABLE
 ADC.DMAContinuousRequests=DISABLE
-ADC.IPParameters=DMAContinuousRequests,ContinuousConvMode,SamplingTime,ClockPrescaler
-ADC.SamplingTime=ADC_SAMPLETIME_1CYCLE_5
+ADC.IPParameters=DMAContinuousRequests,ContinuousConvMode,SamplingTime,ClockPrescaler,LowPowerAutoPowerOff,LowPowerAutoWait
+ADC.LowPowerAutoPowerOff=ENABLE
+ADC.LowPowerAutoWait=ENABLE
+ADC.SamplingTime=ADC_SAMPLETIME_239CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -128,7 +130,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM14_Init-TIM14-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_ADC_Init-ADC-false-HAL-true,7-MX_TIM16_Init-TIM16-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
